<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/nav_search"
        android:title="@string/nav_search"
        android:icon="@drawable/ic_search" />

    <item
        android:id="@+id/nav_add_product"
        android:title="@string/nav_sell"
        android:icon="@drawable/ic_add_circle" />

    <item
        android:id="@+id/nav_messages"
        android:title="@string/nav_messages"
        android:icon="@drawable/ic_chat" />

    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_person" />
</menu>