<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_lg">

    <!-- Handle Bar -->
    <View
        android:layout_width="@dimen/bottom_sheet_handle_width"
        android:layout_height="@dimen/bottom_sheet_handle_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/bottom_sheet_handle_margin"
        android:background="@drawable/bottom_sheet_handle" />

    <!-- Header -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_lg"
        android:text="@string/sort_by"
        android:textSize="@dimen/text_size_xl"
        android:textStyle="bold"
        android:textColor="@color/text_primary" />

    <!-- Sort Options -->
    <RadioGroup
        android:id="@+id/rg_sort_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_relevance"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:text="@string/sort_relevance"
            android:textSize="@dimen/text_size_md"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rb_newest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:text="@string/sort_newest"
            android:textSize="@dimen/text_size_md" />

        <RadioButton
            android:id="@+id/rb_oldest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:text="@string/sort_oldest"
            android:textSize="@dimen/text_size_md" />

        <RadioButton
            android:id="@+id/rb_price_low_high"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:text="@string/sort_price_low"
            android:textSize="@dimen/text_size_md" />

        <RadioButton
            android:id="@+id/rb_price_high_low"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:text="@string/sort_price_high"
            android:textSize="@dimen/text_size_md" />

        <RadioButton
            android:id="@+id/rb_distance"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:text="@string/sort_distance"
            android:textSize="@dimen/text_size_md" />

        <RadioButton
            android:id="@+id/rb_popular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:text="@string/sort_popular"
            android:textSize="@dimen/text_size_md" />

    </RadioGroup>

</LinearLayout>